--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.42.1",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
